# appimgdmg

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
data/: appimg.desktop  badgerdrop.desktop  badgerdrop.mime.xml
debian/: changelog  control  control.binary  copyright  install  postinst  prerm  rules
debian/appimg/DEBIAN/: control  postinst  prerm
scripts/: install-desktop.py  uninstall-desktop.py
src/appimg/: __init__.py  __main__.py  appimage.py  installed.py  installer.py  main.py  notifications.py  settings.py  sound.py
src/appimg/ui/: __init__.py  settings_dialog.py  window.py
src/badgerdrop/: appimage.py  installed.py  main.py  notifications.py  settings.py  sound.py
src/badgerdrop/ui/: drag_content.py  settings_dialog.py  window.py
