[project]
name = "appimg"
version = "0.1.0"
description = "macOS-style AppImage installer for Linux"
requires-python = ">=3.11"
dependencies = [
    "pygobject>=3.46.0",
]

[project.scripts]
appimg = "appimg:main"
appimg-debug = "appimg:debug_main"
appimg-list = "appimg:list_main"
appimg-sound = "appimg:sound_toggle_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appimg"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
