[project]
name = "badgerdrop"
version = "0.1.0"
description = "macOS-style AppImage installer for Linux"
requires-python = ">=3.11"
dependencies = [
    "pygobject>=3.46.0",
]

[project.scripts]
badgerdrop = "badgerdrop:main"
badgerdrop-debug = "badgerdrop:debug_main"
badgerdrop-list = "badgerdrop:list_main"
badgerdrop-sound = "badgerdrop:sound_toggle_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/badgerdrop"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
